# zephyr-lamparray

./: CMakeLists.txt  Kconfig  LICENSE  Makefile.base  Makefile.rpi_pico  README.md  VERSION  prj.conf
boards/: rpi_pico.conf  rpi_pico.overlay
include/error/: error.h
include/hid/: hid.h
include/pixel/: controller.h  pixel.h  request.h
src/: main.c
src/controller/: controller.c
src/error/: error.c  error.h
src/hid/: hid.c  hid.h  report.h  reports.h
src/hid/private/: descriptor.h  reports.h
src/pixel/: controller.c
